@startuml

class TestPlayerMovement {
  - PlayerController playerController
  + void Start()
  + void Update()
}

class PlayerController {
  - Area area
  - bool isAreaSelected
  + void Awake()
  + void Move(Vector3 direction)
}

class Area {
  - int _layer
  - List<Vector2> _points
  + void GenerateSquare()
  + bool IsContain(Vector2 point)
  + void OnDrawGizmos()
}

class MovableAreaEditor {
  + void OnInspectorGUI()
}

TestPlayerMovement --> PlayerController : "1" uses
PlayerController --> Area : "1" references
Area <|-- MovableAreaEditor : "Editor" inherits

note left of Area::IsContain
  点が多角形内にあるかを判定
  レイキャストアルゴリズム使用
end note

note right of PlayerController::Move
  Areaが指定されていれば
  移動範囲を制限
end note

@enduml